deploy/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-frontend
  namespace: prod
  labels:
    app: chatbot-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-frontend
  template:
    metadata:
      labels:
        app: chatbot-frontend
    spec:
      containers:
        - name: frontend
          image: adityadevsecops/nextunitech-frontend:v1.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-frontend
  namespace: prod
  labels:
    app: chatbot-frontend
spec:
  selector:
    app: chatbot-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
